2015-04-16  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_detect_utf8): fixed

	* UTF-8.c (lavt_detect_utf8): fixed

2015-03-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/Bücher.lua: new file (needs curl)

	* avatar.c (avt_pager, avt_pager_screen, avt_pager_line):
	improve handling of underline an bold

2015-02-23  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h: define some nice color macros

2015-01-17  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-vorbis.c:
	adapted for Lua-5.3

	* configure: default to Lua-5.3

2015-01-16  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c, lua/akfavatar-graphic.c:
	adapted for Lua-5.3

2015-01-10  Andreas K. Foerster  <info@akfoerster.de>

	* configure:
	new option: --with-sdl1.2, default to sdl2

	* lua/lua.avt (lavt_launch):
	try to close or flush all files, never return

2014-05-23  Andreas K. Foerster  <info@akfoerster.de>

	* audio-common.c, audio-sdl.c:
	improved support for 24 and 32 bit audio

2014-05-22  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h (AVT_KEY_F): new macro

2014-05-15  Andreas K. Foerster  <info@akfoerster.de>

	* audio-sdl.c: optimized further

2014-05-12  Andreas K. Foerster  <info@akfoerster.de>

	* lua/four_in_a_row.lua: clack sound

2014-05-11  Andreas K. Foerster  <info@akfoerster.de>

	* audio-sdl.c:
	reopen audio-device only when the audio format changes

2014-01-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: new update strategy
	don't update each character when not in slowprint mode
	(avt_update_line): new function

	* avatar.c (dirty_line): new variable

2013-12-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (update_area_sdl): optimization

------------------------------------------------------------------------

2013-12-26  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.24.3 released

2013-10-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char):